# tg_bot_template

./: .env.example  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 6707b7c73d4b_initial_migration_with_usermodel_and_.py
src/: main.py  settings.py
src/application/: dto.py
src/application/use_case/: __init__.py  access_check.py  cansel_interaction.py  filling_profile.py  game_action.py  register_user.py  saving_game_results.py  show_rating.py  update_profile.py
src/domain/: dataclasses.py
src/domain/entities/: game.py  profile.py  tap.py  user.py
src/domain/factories/: game_factory.py
src/domain/interfaces/: photo_storage_service.py  unit_of_work.py
src/domain/services/: answer_validation.py
src/infrastructure/: disk_photo_stogare_service.py  sql_alchemy_uow.py
src/infrastructure/database/: models.py
src/infrastructure/repositories/: __init__.py  sql_profile_repository.py  sql_user_repository.py
src/infrastructure/state_cache/: __init__.py  redis_game_state_cache.py  redis_profile_filling_state_cache.py
src/presentation/handlers/: __init__.py  filling_profile_handlers.py  game_action_handlers.py  launch_bot_handlers.py  show_info_handler.py  show_menu_handler.py  (+1 more)
test/: conftest.py
test/use_case/: test_access_check.py  test_cansel_interaction.py  test_filling_profile.py  test_final_users_game_flow.py  test_game_action.py  test_register_user.py  test_saving_game_results.py  test_show_rating.py  test_update_profile.py
(+10 files in other folders)
