[project]
name = "clean-arch-tgbot-template"
version = "0.1.0"
description = "Hamster Combat from Ali Express"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-dotenv>=0.5.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
